# litertsp

./: .gitignore  CMakeLists.txt  LICENSE
src/: cpu_backend.cpp  cpu_backend.h  gstreamer_pipeline.cpp  inference_backend.h  inference_engine.cpp  inference_engine.h  main.cpp  rtsp_stream_manager.cpp  rtsp_stream_manager.h  stream_discovery.cpp  stream_discovery.h  video_renderer.cpp  video_renderer.h
